--- a/VideoPlayerDemo/src/main/res/layout/content_main.xml
+++ b/VideoPlayerDemo/src/main/res/layout/content_main.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/buttonTrial"
         android:text="Open Trail"
+        android:visibility="gone"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
         android:layout_marginTop="60dp"
@@ -27,7 +28,7 @@
         android:layout_height="wrap_content"
         android:src="@android:drawable/sym_def_app_icon"
         android:text="Open library"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
         android:layout_marginTop="127dp"
@@ -38,7 +39,7 @@
         android:layout_height="wrap_content"
         android:text="View pager"
         android:id="@+id/button"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
